--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -20,8 +20,8 @@
         <section class="quemsomos">
             <h2>Quem somos?</h2>
             <article>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, culpa commodi beatae neque error, et corrupti tempora delectus placeat assumenda nemo, ratione aut quis fuga saepe omnis rem quidem sequi!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias eum facere libero. Consequuntur modi omnis corrupti officiis minima vero aperiam nesciunt perspiciatis repellendus sapiente. Numquam iusto dolore perferendis praesentium harum.</p>
+                <p>"Instituição filantrópica, sem fins lucrativos, que tem a missão de reabilitar e reintegrar a sociedade as pessoas com deficiência física, através de terapias, capacitações e inserção no mercado de trabalho e conquista da cidadania. • Promover a autonomia e a melhoria da qualidade de vida da pessoa com deficiência física, seus cuidadores e sua família. • Prevenir o abrigamento e a segregação dos usuários do serviço, assegurando o direito à convivência familiar e comunitária. • Promover acessos a benefícios programas de transferência de renda e outros serviços socioassistenciais das demais políticas públicas setoriais e do sistema de garantia de direitos. • Promover apoio as famílias na tarefa de cuidar diminuindo a sua sobrecarga de trabalho"</p>
+                
             </article>
         </section>
     </main>
